--- a/templates/404.html
+++ b/templates/404.html
@@ -93,9 +93,9 @@
                         </ul>
                     </li>
                 </ul>
-                <a href="javascript:;" class="signin-loader" rel="nofollow">Hi,请登录</a>&nbsp;&nbsp;<a href="javascript:;"
-                                                                                                     class="signup-loader"
-                                                                                                     rel="nofollow">我要注册</a>&nbsp;&nbsp;<a
+                <a href="javascript:" class="signin-loader" rel="nofollow">Hi,请登录</a>&nbsp;&nbsp;<a href="javascript:"
+                                                                                                    class="signup-loader"
+                                                                                                    rel="nofollow">我要注册</a>&nbsp;&nbsp;<a
                     href="" rel="nofollow">找回密码</a></div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
