--- a/templates/components/blog_active.html
+++ b/templates/components/blog_active.html
@@ -8,9 +8,9 @@
             <h2><a href="{% url 'blog:art' ablog.id  %}" title="">{{ ablog.title|truncatechars:"20" }}</a></h2>
     </header>
     <p class="meta">
-        <time class="time"><i class="glyphicon glyphicon-time"></i> {{ ablog.create_time|date:"Y-m-d H:i:s" }}</time>
+        <time class="time"><i class="glyphicon glyphicon-time"></i> {{ ablog.modify_time|date:"Y-m-d H:i:s" }}</time>
         <span class="views"><i class="glyphicon glyphicon-eye-open"></i> {{ ablog.click_nums }}</span>
-        <a class="comment" href=""><i class="glyphicon glyphicon-comment"></i> 0个不明物体</a></p>
+        <a class="comment" href=""><i class="glyphicon glyphicon-user"></i> {{ ablog.name }}</a></p>
     <p class="note">{% autoescape on %}{{ ablog.content|truncatewords_html:10|striptags }}{% endautoescape %}</p>
 </article>
 {% endfor %}
