1.添加自定义过滤器,公告板模型元组第二个值的显示。 2.自定义模型方法admin显示ManyToManyField字段数据。 3.自定义文章访问模型方法,纠正click_nums字段造成更新modify_time时间字段的问题,并修改主页以修改时间排序。 4.增加开发模式缓存,天气日历模块的模板缓存以及视图页面缓存。 5.修改重复参数函数位置,增加搜索文章联合标签筛选功能以及单独首页标签筛选,增加文章内容标签跳转。 6.中间件流量统计重复问题,暂时恢复只统计首页。 7.使用django-debug-toolbar模块,优化ORM查询效率。

--- a/templates/article.html
+++ b/templates/article.html
@@ -23,7 +23,7 @@
                 {{ show.content|safe }}
                 <p class="article-copyright hidden-xs">未经允许不得转载：<a href="/">XJC博客</a> » <a href="art-{{ show.id }}.html">{{ show.title }}</a></p>
             </article>
-            <div class="article-tags">标签：{% for tag in show.tagss.all %}<a href="tag/" rel="tag">{{ tag.name }}</a>{% endfor %}</div>
+            <div class="article-tags">标签：{% for tag in show.tagss.all %}<a href="{% url 'blog:index' %}?search={{ keyword }}&tag={{ t }}" rel="tag">{{ tag.name }}</a>{% endfor %}</div>
             <div class="relates">
                 <div class="title">
                     <h3>相关推荐</h3>
