--- a/templates/article.html
+++ b/templates/article.html
@@ -14,8 +14,8 @@
                         <time class="time" data-toggle="tooltip" data-placement="bottom" title="时间：{{ show.create_time|date:'Y-m-d H:i:s' }}"><i class="glyphicon glyphicon-time"></i> {{ show.create_time|date:"Y-m-d H:i:s" }}</time></span>
                     <span class="item article-meta-category" data-toggle="tooltip" data-placement="bottom" title="栏目：{{ show.category }}"><i class="glyphicon glyphicon-list"></i>
                         <a href="program" title="">{{ show.category }}</a></span>
-                    <span class="item article-meta-views" data-toggle="tooltip" data-placement="bottom" title="查看：{{ show.click_nums }}">
-                        <i class="glyphicon glyphicon-eye-open"></i> {{ show.click_nums }}</span>
+                    <span class="item article-meta-views" data-toggle="tooltip" data-placement="bottom" title="查看：{{ click_nums }}">
+                        <i class="glyphicon glyphicon-eye-open"></i> {{ click_nums }}</span>
                     <span class="item article-meta-comment" data-toggle="tooltip" data-placement="bottom" title="作者：{{ show.name }}"><i class="glyphicon glyphicon-user"></i>{{ show.name }}</span>
                 </div>
             </header>
