--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load session_extra %}
 <!doctype html>
 <html lang="zh-CN">
 <head>
@@ -55,15 +56,17 @@
                     </li>
                 </ul>
             <!--登录注册登出-->
-                <p><a href="{% url 'blog:index' %}">主页</a>
+                <p id="login_logout"><a  href="{% url 'blog:index' %}">主页</a>
                     {% if user.is_authenticated %}{# 用户未登录时显示 #}
-                        欢迎, {{ user.username }}
+                        <!-- 欢迎,{{ request.session|get:'_auth_user_id' }} -->
+                        欢迎:{{ user.get_username }} &nbsp;
                         <a href="{% url 'Authlogin:logout' %}">登出</a>
                         {% if user.is_staff %}
-                        <a href="http://127.0.0.1:8000/admin/">站点</a>
+                        <a href="http://10.0.0.25:8000/admin/">站点</a>
                         {% endif %}
 
                     {% else %}
+                    <!-- <a>结果{{ user.is_authenticated }}</a> -->
                         <a href="{% url 'Authlogin:register' %}" class="regist">注册</a>
                         <a href="{% url 'Authlogin:login' %}" class="login">登录</a>
                     {% endif %}</p></div>
